Rename WS handshake success error code; update enums.

The new error code needs to be added to histograms.xml, as well as some other
values that apparently have been forgotten to be added.

The reason for renaming the error code is that WebSocket error codes start with
a WS_ prefix.

BUG=663672

Review-Url: https://codereview.chromium.org/2639933005
Cr-Commit-Position: refs/heads/master@{#444771}

Former-commit-id: 2ff3fe13ff8f01226d36f63e9e695bbaf747dbdb