net/websockets/websocket_stream_test.cc
@@ -337,7 +337,7 @@ TEST_F(WebSocketStreamCreateTest, SimpleSuccess) {
   EXPECT_TRUE(stream_);
   EXPECT_TRUE(request_info_);
   EXPECT_TRUE(response_info_);
-  EXPECT_EQ(ERR_WEBSOCKET_HANDSHAKE_SUCCESS,
+  EXPECT_EQ(ERR_WS_UPGRADE,
             url_request_context_host_.network_delegate().last_error());
 }
 
